tests/neg/record.stk
type Point = {x: Int, y: Int}

type Error = {
  x: Int,
  x: Int       // error
}

val p1: Point = {x = 1, y = 2}
val p2: Point = {x = 10, y = false} // error  // error
val p3: Int = 5

p3.x p // error
p1.z p // error
